--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+  	<div class="alert alert-success">
+  		<strong><%= notice %></strong>
+  	</div>
+  	<div class="alert alert-success">
+  		<strong><%= alert %></strong>
+  	</div>
+
     <%= yield %>
   </body>
 </html>
