--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -7,10 +7,10 @@
 		</tr>
 	</thead>
 	<tbody>
-		<%= @diaries.each do |diary| %>
+		<% @diaries.each do |diary| %>
 			<tr>
-				<td>diary.name</td>
-				<td>diary.context</td>
+				<td><%= diary.title %></td>
+				<td><%= diary.context %></td>
 				<td><%= link_to "Delete", diary_path(diary), method: :delete, class: "btn btn-primary" %></td>
 			</tr>
 		<% end %>
@@ -23,3 +23,4 @@
 		</tr>
 	</tbody>
 </table>
+<%= link_to "Home", root_path, class: "btn btn-primary" %>
